--- a/java-lambda-sum/pom.xml
+++ b/java-lambda-sum/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.deepextractor</groupId>
-    <artifactId>hello-lambda</artifactId>
+    <artifactId>lambda-sum</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
