--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -30,7 +30,7 @@ jobs:
               <server>
                 <id>github</id>
                 <username>${{ github.actor }}</username>
-                <password>${{ secrets.GITHUB_TOKEN }}</password>
+                <password>${{ secrets.ARTIFACTORY_TOKEN }}</password>
               </server>
             </servers>
           </settings>
