--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -9,8 +9,10 @@ jobs:
   build-java-lambda-hello:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3        # <-- Add this line
+      - uses: actions/checkout@v3
       - uses: ./.github/actions/setup
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Build java-lambda-hello
         run: |
           cd java-lambda-hello
@@ -19,8 +21,10 @@ jobs:
   build-java-lambda-sum:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3        # <-- Add this line
+      - uses: actions/checkout@v3
       - uses: ./.github/actions/setup
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Build java-lambda-sum
         run: |
           cd java-lambda-sum
