--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -16,7 +16,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Build java-lambda-hello
         run: |
-          cd java-lambda-hello
+          cd lambdas/java-lambda-hello
           mvn deploy
 
   build-java-lambda-sum:
@@ -29,5 +29,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Build java-lambda-sum
         run: |
-          cd java-lambda-sum
+          cd lambdas/java-lambda-sum
           mvn deploy
