frontend: building frontend

--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -31,3 +31,21 @@ jobs:
         run: |
           cd lambdas/java-lambda-sum
           mvn deploy
+
+  build-frontend:
+    runs-on: ubuntu-latest
+    if: contains(github.event.head_commit.message, 'frontend')
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22.15.0'
+      - name: Install dependencies
+        run: |
+          apt-get update
+          apt-get install zip -y
+      - name: Build frontend
+        run: |
+          cd frontend
+          ../deployment/frontend-build.sh
