frontend: Add a new workflow

--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -43,8 +43,8 @@ jobs:
           node-version: '22.15.0'
       - name: Install dependencies
         run: |
-          apt-get update
-          apt-get install zip -y
+          sudo apt-get update
+          sudo apt-get install zip -y
       - name: Build frontend
         run: |
           cd frontend
