frontend: Add a new workflow.

--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -48,4 +48,4 @@ jobs:
       - name: Build frontend
         run: |
           cd frontend
-          ../deployment/frontend-build.sh
+          ../../deployment/frontend-build.sh
