--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -46,6 +46,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install zip -y
       - name: Build frontend
+        env:
+            MY_SECRET: ${{ secrets.GITHUB_TOKEN }}
         run: |
           cd frontend
           bash ../deployment/frontend_build.sh
