--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -51,4 +51,31 @@ jobs:
         run: |
           cd frontend
           bash ../deployment/scripts/frontend_build.sh
+
+  build-and-push:
+    runs-on: ubuntu-latest
+    if: contains(github.event.head_commit.message, 'python-lambda')
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./lambdas/python_lambda
+          push: true
+          tags: ghcr.io/${{ github.repository }}/python-lambda:latest
           
