--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,27 +15,20 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
       
-      - name: Initialize Terraform
+      - name: Set environment variables and navigate to Terraform directory
         run: |
           cd terraform
-          terraform init
+          echo "Working directory set to terraform"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Initialize Terraform
+        run: terraform init
 
       - name: Terraform Plan
-        run: |
-          cd terraform
-          terraform plan
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: terraform plan
 
       - name: Terraform Apply
-        run: |
-          cd terraform
-          terraform apply -auto-approve
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: terraform apply -auto-approve
 
