--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -15,9 +15,11 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Build java-lambda-hello
+        env:
+          LAMBDA_ARTIFACT: java-lambda-hello
+          JAVA_LAMBDA_VERSION: 1.0.4
         run: |
-          cd lambdas/java-lambda-hello
-          mvn deploy
+          bash ../deployment/scripts/maven_build.sh "$LAMBDA_ARTIFACT" "$JAVA_LAMBDA_VERSION"
 
   build-java-lambda-sum:
     runs-on: ubuntu-latest
@@ -28,9 +30,11 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Build java-lambda-sum
+        env:
+          LAMBDA_ARTIFACT: java-lambda-sum
+          JAVA_LAMBDA_VERSION: 1.0.6
         run: |
-          cd lambdas/java-lambda-sum
-          mvn deploy
+          bash ../deployment/scripts/maven_build.sh "$LAMBDA_ARTIFACT" "$JAVA_LAMBDA_VERSION"
 
   build-frontend:
     runs-on: ubuntu-latest
@@ -78,4 +82,3 @@ jobs:
           context: ./lambdas/python_lambda
           push: true
           tags: ghcr.io/${{ github.repository }}/python-lambda:latest
-          
