--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -19,7 +19,7 @@ jobs:
           LAMBDA_ARTIFACT: java-lambda-hello
           JAVA_LAMBDA_VERSION: 1.0.4
         run: |
-          bash ../deployment/scripts/maven_build.sh "$LAMBDA_ARTIFACT" "$JAVA_LAMBDA_VERSION"
+          bash deployment/scripts/maven_build.sh "$LAMBDA_ARTIFACT" "$JAVA_LAMBDA_VERSION"
 
   build-java-lambda-sum:
     runs-on: ubuntu-latest
@@ -34,7 +34,7 @@ jobs:
           LAMBDA_ARTIFACT: java-lambda-sum
           JAVA_LAMBDA_VERSION: 1.0.6
         run: |
-          bash ../deployment/scripts/maven_build.sh "$LAMBDA_ARTIFACT" "$JAVA_LAMBDA_VERSION"
+          bash deployment/scripts/maven_build.sh "$LAMBDA_ARTIFACT" "$JAVA_LAMBDA_VERSION"
 
   build-frontend:
     runs-on: ubuntu-latest
