--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -51,7 +51,7 @@ jobs:
           sudo apt-get install zip -y
       - name: Build frontend
         env:
-            MY_SECRET: ${{ secrets.GITHUB_TOKEN }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           cd frontend
           bash ../deployment/scripts/frontend_build.sh
