--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -16,6 +16,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Build java-lambda-hello
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LAMBDA_ARTIFACT: java-lambda-hello
           JAVA_LAMBDA_VERSION: 1.0.5
         run: |
@@ -31,6 +32,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Build java-lambda-sum
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LAMBDA_ARTIFACT: java-lambda-sum
           JAVA_LAMBDA_VERSION: 1.0.7
         run: |
