--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -21,6 +21,7 @@ jobs:
           JAVA_LAMBDA_VERSION: 1.0.5
         run: |
           bash deployment/scripts/maven_build.sh "$LAMBDA_ARTIFACT" "$JAVA_LAMBDA_VERSION"
+          bash deployment/scripts/update_lambda_versions.sh "$LAMBDA_ARTIFACT" "$JAVA_LAMBDA_VERSION"
 
   build-java-lambda-sum:
     runs-on: ubuntu-latest
@@ -37,6 +38,7 @@ jobs:
           JAVA_LAMBDA_VERSION: 1.0.7
         run: |
           bash deployment/scripts/maven_build.sh "$LAMBDA_ARTIFACT" "$JAVA_LAMBDA_VERSION"
+          bash deployment/scripts/update_lambda_versions.sh "$LAMBDA_ARTIFACT" "$JAVA_LAMBDA_VERSION"
 
   build-frontend:
     runs-on: ubuntu-latest
