--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -21,10 +21,11 @@ jobs:
           JAVA_LAMBDA_VERSION: 1.0.10
         run: |
           bash deployment/scripts/maven_build.sh "$LAMBDA_ARTIFACT" "$JAVA_LAMBDA_VERSION"
-          bash deployment/scripts/update_lambda_versions.sh "$LAMBDA_ARTIFACT" "$JAVA_LAMBDA_VERSION"
+          bash deployment/scripts/update_artifact_versions.sh "$LAMBDA_ARTIFACT" "$JAVA_LAMBDA_VERSION"
 
   build-java-lambda-sum:
     runs-on: ubuntu-latest
+    needs: build-java-lambda-hello
     if: contains(github.event.head_commit.message, 'java-lambda-sum')
     steps:
       - uses: actions/checkout@v3
@@ -38,10 +39,11 @@ jobs:
           JAVA_LAMBDA_VERSION: 1.0.12
         run: |
           bash deployment/scripts/maven_build.sh "$LAMBDA_ARTIFACT" "$JAVA_LAMBDA_VERSION"
-          bash deployment/scripts/update_lambda_versions.sh "$LAMBDA_ARTIFACT" "$JAVA_LAMBDA_VERSION"
+          bash deployment/scripts/update_artifact_versions.sh "$LAMBDA_ARTIFACT" "$JAVA_LAMBDA_VERSION"
 
   build-python-lambda:
     runs-on: ubuntu-latest
+    needs: build-java-lambda-sum
     if: contains(github.event.head_commit.message, 'python-lambda')
     permissions:
       contents: read
@@ -69,6 +71,7 @@ jobs:
 
   build-frontend:
     runs-on: ubuntu-latest
+    needs: build-python-lambda
     if: contains(github.event.head_commit.message, 'frontend')
     steps:
       - uses: actions/checkout@v3
@@ -83,6 +86,9 @@ jobs:
       - name: Build frontend
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            FRONTEND_ARTIFACT: frontend
+            FRONTEND_VERSION: 1.0.12
         run: |
           cd frontend
-          bash ../deployment/scripts/frontend_build.sh
+          bash ../deployment/scripts/frontend_build.sh "$FRONTEND_ARTIFACT" "$FRONTEND_VERSION"
+          bash deployment/scripts/update_artifact_versions.sh "$FRONTEND_ARTIFACT" "$FRONTEND_VERSION"
